# fitness_ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agent/: fitness_agent.py  tools.py
models/: database.py  models.py
