[project]
name = "fitness-ai"
version = "0.1.0"
description = "AI-powered fitness assistant that provides personalized workout and diet plans"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "langchain",
    "langchain-google-genai",
    "google-generativeai",
    "python-dotenv",
    "pydantic",
    "uvicorn",
    "rich",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["models"]
